feat (backend): get invocation metrics
